feat: add SEO and social preview meta tags with preview image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JsonBoard</title>
+
+    <title>JSONBoard - Gerenciador de Arquivos JSON</title>
+    <meta name="description"
+        content="JSONBoard é uma aplicação web 100% client-side para upload, edição e organização de grandes arquivos JSON com até 450MB. Desenvolvido por Ronald Almeida.">
+    <meta name="keywords"
+        content="json, editor json, json online, json viewer, react, typescript, indexeddb, web worker, client-side, gerenciador json, json grande">
+    <meta name="author" content="Ronald Almeida">
+
+    <meta property="og:title" content="JSONBoard - Gerenciador de Arquivos JSON" />
+    <meta property="og:description"
+        content="Gerencie, edite e visualize arquivos JSON de até 450MB diretamente no navegador com sincronização entre abas e persistência local." />
+    <meta property="og:url" content="https://jsonboard.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://jsonboard.vercel.app/preview.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="JSONBoard - Gerenciador de Arquivos JSON" />
+    <meta name="twitter:description"
+        content="Ferramenta client-side para edição e organização de arquivos JSON pesados com persistência local." />
+    <meta name="twitter:image" content="https://jsonboard.vercel.app/preview.png" />
+
+    <link rel="canonical" href="https://jsonboard.vercel.app/" />
 </head>
 
 <body>
